--- a/vityaz/css/style.css
+++ b/vityaz/css/style.css
@@ -866,6 +866,7 @@ body {
 .whyWe__item {
   position: relative;
   width: 29%;
+  text-align: center;
 }
 
 .whyWe__item:after {
@@ -910,10 +911,10 @@ body {
 }
 
 .whyWe__descr {
-  margin-top: 25px;
+  margin-top: 15px;
   font-family: 'Montserrat';
   font-size: 22px;
-  line-height: 28px;
+  line-height: 33px;
   color: #FFFFFF;
 }
 
@@ -1642,6 +1643,37 @@ body {
   margin-top: 0;
 }
 
+.page-head__list {
+  margin-top: 150px;
+  max-width: 80%;
+}
+
+.page-head__list li {
+  position: relative;
+  margin-top: 40px;
+  padding-left: 75px;
+  font-weight: 300;
+  font-size: 36px;
+  line-height: 43px;
+  color: #2A2A2A;
+}
+
+.page-head__list li:first-child {
+  margin-top: 0;
+}
+
+.page-head__list li:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: url(../img/about_check.png) no-repeat;
+  background-size: 100%;
+}
+
 .physical {
   padding: 160px 0;
 }
@@ -1757,9 +1789,12 @@ body {
 }
 
 .variants__item {
+  margin: 0 10px;
   padding: 15px;
-  max-width: 470px;
+  max-width: 455px;
   border-radius: 10px;
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 .variants__item__box {
@@ -1789,6 +1824,14 @@ body {
 
 .variants__item__black .variants__item__box {
   border: 1px solid #fff;
+}
+
+.variants__item__black .variants__subtitle, .variants__item__black .variants__price {
+  color: #fff;
+}
+
+.variants__item__black .variants__list li {
+  color: #fff;
 }
 
 .variants__subtitle {
@@ -1828,6 +1871,244 @@ body {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   margin-top: 40px;
+}
+
+.device {
+  padding-bottom: 140px;
+}
+
+.device__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 120px;
+}
+
+.device__item {
+  max-width: 420px;
+}
+
+.device__img {
+  width: 100%;
+  height: 200px;
+}
+
+.device__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.device__subtitle {
+  margin-top: 90px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  color: #232323;
+}
+
+.objects {
+  padding-bottom: 170px;
+}
+
+.objects__items {
+  margin-top: 90px;
+}
+
+.objects__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 30px;
+}
+
+.objects__item:first-child {
+  margin-top: 0;
+}
+
+.objects__left {
+  padding-top: 40px;
+  width: 48%;
+}
+
+.objects__right {
+  max-width: 620px;
+  max-height: 300px;
+}
+
+.objects__right img {
+  max-width: 100%;
+}
+
+.objects__subtitle {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  color: #2A2A2A;
+}
+
+.objects__text {
+  margin-top: 32px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #2A2A2A;
+}
+
+.pult-page .page-head__top {
+  background: url(../img/pult_head_bg.png) center center/cover no-repeat;
+}
+
+.pult-page .variants__item {
+  padding: 0;
+}
+
+.pult-page .variants__list {
+  margin-top: 20px;
+}
+
+.pult-page .variants__price {
+  margin-top: 15px;
+}
+
+.pult-page .variants .btn {
+  margin-top: 25px;
+}
+
+.note {
+  padding-bottom: 170px;
+}
+
+.note__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 70px 90px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.note__icon {
+  margin-right: 85px;
+  width: 142px;
+}
+
+.note__icon img {
+  max-width: 100%;
+}
+
+.note__text {
+  width: 65%;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #828282;
+}
+
+.addition-page .page-head__top {
+  background: url(../img/addition_head_bg.png) center center/cover no-repeat;
+}
+
+.addition {
+  padding: 170px 0;
+}
+
+.addition__item {
+  margin-top: 170px;
+  padding: 125px 100px 100px 130px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.addition__item:first-child {
+  margin-top: 0;
+}
+
+.addition__item__first {
+  background: url(../img/additional_1.png) no-repeat;
+  background-size: 144px;
+  background-position: 92% 85px;
+}
+
+.addition__item__second {
+  background: url(../img/additional_2.png) no-repeat;
+  background-size: 144px;
+  background-position: 92% 85px;
+}
+
+.addition__title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+  color: #2A2A2A;
+}
+
+.addition__descr {
+  max-width: 80%;
+  font-weight: 300;
+  font-size: 36px;
+  line-height: 42px;
+  color: #2A2A2A;
+}
+
+.addition__list {
+  margin-top: 110px;
+}
+
+.addition__list li {
+  position: relative;
+  margin-top: 40px;
+  padding-left: 75px;
+  font-weight: 300;
+  font-size: 36px;
+  line-height: 43px;
+  color: #2A2A2A;
+}
+
+.addition__list li:first-of-type {
+  margin-top: 0;
+}
+
+.addition__list li:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: url(../img/about_check.png) no-repeat;
+  background-size: 100%;
+}
+
+.addition__subtitle {
+  margin-bottom: 45px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 45px;
+  color: #2A2A2A;
+}
+
+.addition .btn {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: inline-block;
+  margin-top: 100px;
 }
 
 @media (max-width: 1800px) {
@@ -1884,7 +2165,7 @@ body {
   }
   .whyWe__descr {
     font-size: 20px;
-    line-height: 25px;
+    line-height: 28px;
   }
   .about__descr {
     bottom: -20%;
@@ -2000,7 +2281,6 @@ body {
   .whyWe__item {
     margin: 0 15px 60px;
     width: 35%;
-    text-align: center;
   }
   .whyWe__item:after {
     right: -63%;
@@ -2425,7 +2705,7 @@ body {
     font-size: 22px;
   }
   .whyWe__descr {
-    margin-top: 15px;
+    margin-top: 10px;
     font-size: 16px;
     line-height: 20px;
   }
@@ -2680,9 +2960,6 @@ body {
   }
   .whyWe__subtitle {
     margin-top: 25px;
-  }
-  .whyWe__descr {
-    margin-top: 10px;
   }
   .about__box {
     padding-bottom: 60px;
