--- a/vityaz/css/style.css
+++ b/vityaz/css/style.css
@@ -1901,6 +1901,7 @@ body {
 }
 
 .device__item {
+  margin: 0 20px;
   max-width: 420px;
 }
 
@@ -1953,18 +1954,20 @@ body {
 }
 
 .objects__right {
-  max-width: 620px;
-  max-height: 300px;
+  width: 44%;
 }
 
 .objects__right img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .objects__subtitle {
   font-weight: 700;
   font-size: 32px;
-  line-height: 40px;
+  line-height: 100%;
   color: #2A2A2A;
 }
 
@@ -2347,9 +2350,44 @@ body {
     right: -50%;
     width: 75%;
   }
+  .page-head {
+    padding-bottom: 120px;
+  }
   .page-head__descr {
+    margin-top: 110px;
     font-size: 28px;
     line-height: 37px;
+  }
+  .variants__item {
+    max-width: 405px;
+  }
+  .variants__item__box {
+    padding: 45px 38px;
+  }
+  .variants__subtitle {
+    font-size: 28px;
+  }
+  .variants__list {
+    margin-top: 40px;
+  }
+  .variants__list li {
+    font-size: 22px;
+    line-height: 26px;
+  }
+  .variants__price {
+    margin-top: 70px;
+    font-size: 28px;
+  }
+  .variants .btn {
+    padding: 28px 60px;
+  }
+  .device__subtitle {
+    margin-top: 50px;
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .objects__left {
+    padding-top: 0;
   }
 }
 
@@ -2476,9 +2514,6 @@ body {
     font-size: 27px;
     line-height: 30px;
   }
-  .page-head {
-    padding-bottom: 140px;
-  }
   .page-head__descr {
     margin-top: 90px;
   }
@@ -2507,6 +2542,48 @@ body {
   .physical__descr__list li {
     font-size: 22px;
     line-height: 30px;
+  }
+  .variants__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 90px;
+  }
+  .variants__item {
+    margin: 0 20px;
+    max-width: unset;
+    width: 46%;
+  }
+  .variants__item:last-child {
+    margin-top: 55px;
+  }
+  .variants__price {
+    margin-top: 50px;
+  }
+  .device__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 70px;
+  }
+  .device__item {
+    margin-top: 60px;
+    max-width: unset;
+    width: 46%;
+  }
+  .objects {
+    padding-bottom: 140px;
+  }
+  .objects__left {
+    width: 50%;
+  }
+  .objects__subtitle {
+    font-size: 28px;
+  }
+  .objects__text {
+    font-size: 20px;
+    line-height: 26px;
   }
 }
 
@@ -2717,6 +2794,29 @@ body {
   .physical .btn {
     padding: 20px 60px;
     font-size: 20px;
+  }
+  .variants__item {
+    width: 45%;
+  }
+  .variants__item__box {
+    padding: 35px 25px;
+  }
+  .variants__list li {
+    margin-top: 20px;
+    font-size: 19px;
+    line-height: 23px;
+    text-align: center;
+  }
+  .device__item {
+    width: 45%;
+  }
+  .objects__subtitle {
+    font-size: 24px;
+  }
+  .objects__text {
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 23px;
   }
 }
 
@@ -3140,6 +3240,90 @@ body {
     padding: 18px 40px;
     font-size: 18px;
   }
+  .variants__items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .variants__item {
+    margin: 40px 0 0;
+    width: 80%;
+  }
+  .variants__item:first-child {
+    margin-top: 0;
+  }
+  .variants__subtitle {
+    font-size: 24px;
+  }
+  .variants__list li {
+    margin-top: 15px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .variants__price {
+    font-size: 24px;
+  }
+  .variants .btn {
+    padding: 20px 50px;
+    font-size: 18px;
+  }
+  .device {
+    padding: 110px 0;
+  }
+  .device__item {
+    width: 43%;
+  }
+  .device__img {
+    height: 170px;
+  }
+  .device__subtitle {
+    margin-top: 40px;
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .objects {
+    padding-bottom: 110px;
+  }
+  .objects__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 70px;
+  }
+  .objects__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    width: 70%;
+  }
+  .objects__left {
+    width: 100%;
+  }
+  .objects__right {
+    width: 100%;
+    height: 250px;
+  }
+  .objects__subtitle {
+    margin-top: 25px;
+    font-size: 22px;
+  }
+  .objects__text {
+    margin-top: 15px;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -3372,6 +3556,29 @@ body {
   }
   .physical__price__img, .physical__descr__img {
     height: 250px;
+  }
+  .variants__items {
+    margin-top: 70px;
+  }
+  .variants__price {
+    font-size: 20px;
+  }
+  .device {
+    padding: 90px 0;
+  }
+  .device__items {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .device__item {
+    width: 60%;
+  }
+  .objects {
+    padding-bottom: 90px;
+  }
+  .objects__item {
+    width: 85%;
   }
 }
 
@@ -3684,8 +3891,12 @@ body {
     max-height: 220px;
   }
   .page-head__descr {
+    margin-top: 30px;
     font-size: 14px;
     line-height: 18px;
+  }
+  .page-head__descr p {
+    margin-top: 20px;
   }
   .physical {
     padding-bottom: 60px;
@@ -3725,6 +3936,64 @@ body {
     margin-top: 35px;
     padding: 14px 40px;
     font-size: 14px;
+  }
+  .variants__items {
+    margin-top: 40px;
+  }
+  .variants__item {
+    width: 100%;
+  }
+  .variants__subtitle {
+    font-size: 19px;
+  }
+  .variants__list {
+    margin-top: 30px;
+  }
+  .variants__list li {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .variants__price {
+    margin-top: 30px;
+    font-size: 18px;
+  }
+  .variants .btn {
+    padding: 14px 40px;
+    font-size: 16px;
+  }
+  .device {
+    padding: 65px 0;
+  }
+  .device__items {
+    margin-top: 45px;
+  }
+  .device__item {
+    margin: 35px 0 0;
+    width: 90%;
+  }
+  .device__img {
+    height: 90px;
+  }
+  .device__subtitle {
+    margin-top: 25px;
+    font-size: 15px;
+    line-height: 17px;
+  }
+  .objects__right {
+    height: 190px;
+  }
+  .objects__items {
+    margin-top: 50px;
+  }
+  .objects__item {
+    width: 100%;
+  }
+  .objects__subtitle {
+    font-size: 16px;
+  }
+  .objects__text {
+    font-size: 14px;
+    line-height: 17px;
   }
 }
 
