--- a/vityaz/css/style.css
+++ b/vityaz/css/style.css
@@ -2114,7 +2114,7 @@ body {
   margin-bottom: 45px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 45px;
+  line-height: 100%;
   color: #2A2A2A;
 }
 
@@ -2169,6 +2169,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0 10px;
   padding: 23px;
   -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
@@ -2179,14 +2180,16 @@ body {
 }
 
 .modifier__img img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .modifier__subtitle {
   margin-top: 25px;
   font-weight: 700;
   font-size: 32px;
-  line-height: 39px;
   color: #232323;
 }
 
@@ -2218,8 +2221,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0 10px;
   padding: 35px 25px;
-  max-width: 335px;
+  width: 335px;
   -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
@@ -2393,6 +2397,13 @@ body {
   }
   .objects__left {
     padding-top: 0;
+  }
+  .modifier__subtitle {
+    font-size: 28px;
+  }
+  .tools__subtitle {
+    font-size: 28px;
+    line-height: 35px;
   }
 }
 
@@ -2605,6 +2616,54 @@ body {
   }
   .note__text {
     width: 100%;
+  }
+  .addition__item {
+    padding: 100px;
+  }
+  .addition__item__first, .addition__item__second {
+    background-size: 100px;
+  }
+  .addition__title {
+    font-size: 32px;
+    line-height: 43px;
+  }
+  .addition__descr {
+    font-size: 26px;
+    line-height: 34px;
+  }
+  .addition__list {
+    margin-top: 80px;
+  }
+  .addition__list li {
+    margin-top: 30px;
+    padding-left: 55px;
+    font-size: 28px;
+    line-height: 37px;
+  }
+  .addition__list li:before {
+    width: 32px;
+    height: 32px;
+  }
+  .addition__subtitle {
+    font-size: 28px;
+  }
+  .modifier__items {
+    margin-top: 90px;
+  }
+  .tools {
+    padding-bottom: 125px;
+  }
+  .tools__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .tools__item {
+    margin-bottom: 45px;
+    width: 46%;
+  }
+  .tools__img {
+    width: 100px;
+    height: 100px;
   }
 }
 
@@ -2847,6 +2906,20 @@ body {
   }
   .note__box {
     padding: 50px 60px;
+  }
+  .modifier {
+    padding-bottom: 140px;
+  }
+  .modifier__items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 30px;
+  }
+  .modifier__item {
+    margin: 60px 25px 0;
   }
 }
 
@@ -3375,6 +3448,63 @@ body {
     font-size: 20px;
     line-height: 24px;
   }
+  .addition {
+    padding-bottom: 110px;
+  }
+  .addition__item {
+    margin-top: 90px;
+    padding: 50px;
+  }
+  .addition__item__first, .addition__item__second {
+    background-size: 80px;
+  }
+  .addition__title {
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .addition__descr {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .addition__list {
+    margin-top: 60px;
+  }
+  .addition__list li {
+    margin-top: 20px;
+    padding-left: 45px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .addition__list li:before {
+    width: 26px;
+    height: 26px;
+  }
+  .addition__subtitle {
+    font-size: 20px;
+  }
+  .addition .btn {
+    margin-top: 70px;
+    padding: 20px 50px;
+    font-size: 18px;
+  }
+  .modifier {
+    padding-bottom: 110px;
+  }
+  .modifier__item {
+    margin: 45px 10px 0;
+    width: 46%;
+  }
+  .modifier__subtitle {
+    font-size: 24px;
+  }
+  .tools__item {
+    padding: 25px;
+  }
+  .tools__subtitle {
+    margin-top: 25px;
+    font-size: 24px;
+    line-height: 30px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -3640,6 +3770,56 @@ body {
   .note__text {
     font-size: 16px;
     line-height: 20px;
+  }
+  .addition__item__first, .addition__item__second {
+    background-size: 60px;
+    background-position: 95% 50px;
+  }
+  .addition__title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .addition__descr {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .addition__list {
+    margin-top: 60px;
+  }
+  .addition__list li {
+    margin-top: 15px;
+    padding-left: 40px;
+    font-size: 17px;
+    line-height: 22px;
+  }
+  .addition__subtitle {
+    margin-bottom: 30px;
+    font-size: 17px;
+  }
+  .addition .btn {
+    font-size: 16px;
+  }
+  .modifier__item {
+    margin: 45px 0 0;
+    padding: 20px;
+    width: 70%;
+  }
+  .modifier__subtitle {
+    margin-top: 20px;
+    font-size: 20px;
+  }
+  .tools__item {
+    margin: 0 auto 45px;
+    width: 70%;
+  }
+  .tools__subtitle {
+    margin-top: 25px;
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .tools__img {
+    width: 75px;
+    height: 75px;
   }
 }
 
@@ -4088,6 +4268,80 @@ body {
     font-size: 14px;
     line-height: 17px;
     text-align: center;
+  }
+  .addition {
+    padding-bottom: 60px;
+  }
+  .addition__item {
+    margin-top: 40px;
+    padding: 20px;
+  }
+  .addition__item__first, .addition__item__second {
+    background: none;
+  }
+  .addition__title {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .addition__descr {
+    max-width: 100%;
+    font-size: 13px;
+    line-height: 17px;
+  }
+  .addition__list {
+    margin-top: 35px;
+  }
+  .addition__list li {
+    padding-left: 30px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .addition__list li:before {
+    width: 20px;
+    height: 20px;
+  }
+  .addition__subtitle {
+    margin-bottom: 20px;
+    font-size: 14px;
+  }
+  .addition .btn {
+    margin-top: 40px;
+    padding: 14px 40px;
+    font-size: 14px;
+  }
+  .modifier {
+    padding-bottom: 70px;
+  }
+  .modifier__items {
+    margin-top: 20px;
+  }
+  .modifier__item {
+    margin-top: 25px;
+    padding: 15px;
+    width: 100%;
+  }
+  .modifier__img {
+    height: 170px;
+  }
+  .modifier__subtitle {
+    margin-top: 15px;
+    font-size: 16px;
+  }
+  .tools {
+    padding-bottom: 45px;
+  }
+  .tools__item {
+    margin: 0 auto 25px;
+    width: 100%;
+  }
+  .tools__subtitle {
+    margin-top: 20px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .tools__img {
+    width: 60px;
+    height: 60px;
   }
 }
 
