--- a/vityaz/css/style.css
+++ b/vityaz/css/style.css
@@ -2263,6 +2263,102 @@ body {
   width: 435px;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #FBFCFC;
+}
+
+.modal__big {
+  padding-bottom: 70px;
+  width: 700px;
+}
+
+.modal__top {
+  width: 100%;
+}
+
+.modal__top img {
+  width: 100%;
+}
+
+.modal__title {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 46px;
+  text-align: center;
+  color: #282828;
+}
+
+.modal__title span {
+  font-weight: 700;
+}
+
+.modal__close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  z-index: 999;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 45px;
+  line-height: 21px;
+  cursor: pointer;
+}
+
+.modal .btn {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  margin-top: 60px;
+  padding: 25px 60px;
+  font-size: 20px;
+}
+
+.modal__mini {
+  padding: 25px;
+  height: 120px;
+  width: 380px;
+  border-radius: 10px;
+}
+
+.modal__mini .modal__close {
+  color: #282828;
+}
+
+.modal__mini .modal__title {
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.modal__mini .modal__title span {
+  color: #F9A11E;
+}
+
+.modal__mini .modal__subtitle {
+  color: #212121;
+  text-align: center;
+  font-size: 15px;
+}
+
+.overlay,
+#action,
+#thanks {
+  display: none;
+}
+
 @media (max-width: 1800px) {
   .feedback__bg__second {
     background-size: 250px;
@@ -2416,6 +2512,13 @@ body {
   .tools__subtitle {
     font-size: 28px;
     line-height: 35px;
+  }
+  .modal__big {
+    width: 600px;
+  }
+  .modal__title {
+    font-size: 36px;
+    line-height: 40px;
   }
 }
 
@@ -2683,6 +2786,19 @@ body {
   .fire-page .tools__items {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+  }
+  .modal__big {
+    padding-bottom: 55px;
+    width: 500px;
+  }
+  .modal__title {
+    font-size: 30px;
+    line-height: 34px;
+  }
+  .modal .btn {
+    margin-top: 45px;
+    padding: 20px 45px;
+    font-size: 18px;
   }
 }
 
@@ -3544,6 +3660,29 @@ body {
     margin-top: 25px;
     font-size: 24px;
     line-height: 30px;
+  }
+  .modal__big {
+    padding-bottom: 45px;
+    width: 400px;
+  }
+  .modal__close {
+    top: 8px;
+    right: 8px;
+  }
+  .modal__title {
+    font-size: 24px;
+    line-height: 27px;
+  }
+  .modal .btn {
+    margin-top: 35px;
+    padding: 16px 40px;
+    font-size: 16px;
+  }
+  .modal__mini {
+    height: 110px;
+  }
+  .modal__mini .modal__title {
+    font-size: 22px;
   }
 }
 
@@ -4414,6 +4553,36 @@ body {
     margin-right: 0;
     margin-left: 0;
     width: 100%;
+  }
+  .modal__big {
+    padding-bottom: 35px;
+    width: 290px;
+  }
+  .modal__close {
+    top: 4px;
+    right: 4px;
+    font-size: 40px;
+  }
+  .modal__title {
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .modal .btn {
+    margin-top: 25px;
+    padding: 13px 35px;
+    font-size: 14px;
+  }
+  .modal__mini {
+    padding: 20px 15px 15px;
+    width: 290px;
+    height: 100px;
+  }
+  .modal__mini .modal__title {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .modal__mini .modal__subtitle {
+    font-size: 13px;
   }
 }
 
