--- a/vityaz/css/style.css
+++ b/vityaz/css/style.css
@@ -515,6 +515,8 @@ body {
   background: url(../img/menu_arrow.svg) no-repeat;
   background-size: 100%;
   cursor: pointer;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
 }
 
 .header__menu__drop .header__menu__drop__list {
@@ -570,6 +572,11 @@ body {
 .header__menu__drop:hover .header__menu__drop__list {
   visibility: visible;
   opacity: 1;
+}
+
+.header__menu__drop:hover .header__menu__drop__link:after {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .header__phone {
@@ -3184,6 +3191,16 @@ body {
     padding: 20px;
     height: auto;
   }
+  .header__menu__drop:hover .header__menu__drop__link:after {
+    top: 9px;
+    -webkit-transform: none;
+            transform: none;
+  }
+  .header__menu__drop.active .header__menu__drop__link:after {
+    top: 5px;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
   .promo {
     padding-bottom: 70px;
   }
@@ -3300,8 +3317,14 @@ body {
   .feedback__bg__second {
     padding: 80px 0 90px;
   }
+  .feedback__left:before {
+    display: none;
+  }
   .feedback__right {
     width: 90%;
+  }
+  .feedback__right:before {
+    display: none;
   }
   .feedback__descr {
     font-size: 18px;
