--- a/vityaz/css/style.css
+++ b/vityaz/css/style.css
@@ -728,12 +728,10 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FFC652), to(#DB9E39));
-  background: linear-gradient(180deg, #FFC652 0%, #DB9E39 100%);
+  background: #DB9E39;
   -webkit-filter: blur(200px);
           filter: blur(200px);
   border-radius: 50%;
-  display: none;
 }
 
 .section__title {
@@ -1123,12 +1121,10 @@ body {
   display: block;
   width: 30%;
   height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 198, 82, 0.3)), to(rgba(219, 158, 57, 0.3)));
-  background: linear-gradient(180deg, rgba(255, 198, 82, 0.3) 0%, rgba(219, 158, 57, 0.3) 100%);
+  background: rgba(255, 198, 82, 0.3);
   -webkit-filter: blur(90px);
           filter: blur(90px);
   border-radius: 539px;
-  display: none;
 }
 
 .feedback__title {
@@ -1163,12 +1159,10 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 198, 82, 0.3)), to(rgba(219, 158, 57, 0.3)));
-  background: linear-gradient(180deg, rgba(255, 198, 82, 0.3) 0%, rgba(219, 158, 57, 0.3) 100%);
+  background: rgba(255, 198, 82, 0.3);
   -webkit-filter: blur(250px);
           filter: blur(250px);
   border-radius: 539px;
-  display: none;
 }
 
 .feedback-form {
