--- a/zaliv/css/style.css
+++ b/zaliv/css/style.css
@@ -491,6 +491,11 @@ body {
   margin: 0 auto;
 }
 
+.header {
+  position: relative;
+  z-index: 995;
+}
+
 .header__top {
   padding: 25px 0;
   background: linear-gradient(90.33deg, #022136 26.18%, #004878 90.13%), linear-gradient(0deg, #022136, #022136), #013E67;
@@ -644,7 +649,7 @@ body {
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 100;
+  z-index: 995;
   width: 100%;
   visibility: hidden;
   opacity: 0;
@@ -697,7 +702,7 @@ body {
   display: none;
 }
 
-.adsense-slider .adsense__slide {
+.adsense-slider__slide {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -715,7 +720,7 @@ body {
   color: #A4A4A4;
 }
 
-.adsense-slider .adsense__slide img {
+.adsense-slider__slide img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -730,12 +735,16 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   min-width: 415px;
-  padding: 30px 40px 12px;
+  padding: 30px 40px 20px;
   background: linear-gradient(140.39deg, #73A5C8 7.32%, rgba(115, 165, 200, 0.6) 191.6%);
+  border-radius: 10px;
 }
 
 .lc__title {
@@ -768,6 +777,7 @@ body {
   background-color: #fff;
   font-weight: 500;
   font-size: 14px;
+  border-radius: 10px;
 }
 
 .lc__form input:first-child {
@@ -792,6 +802,7 @@ body {
   font-weight: 600;
   font-size: 24px;
   color: #FFFFFF;
+  border-radius: 10px;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -818,27 +829,6 @@ body {
   text-decoration: none;
 }
 
-.section__title {
-  margin-bottom: 35px;
-  padding-top: 10px;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 100%;
-  text-transform: uppercase;
-  color: #022136;
-}
-
-.section__descr {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
-  color: #022136;
-}
-
-.section__descr p {
-  margin-top: 25px;
-}
-
 .page-box {
   padding: 25px 0;
   background: linear-gradient(112.83deg, #e5e5e5 9.15%, rgba(227, 227, 227, 0) 68.01%, #FFFFFF 68.01%);
@@ -857,7 +847,9 @@ body {
 .page-box__inner:before, .page-box__inner:after {
   content: '';
   position: absolute;
+  z-index: 1;
   display: block;
+  display: none;
   width: 180px;
   height: 205px;
 }
@@ -879,6 +871,27 @@ body {
 .page-box__inner > section {
   position: relative;
   z-index: 5;
+}
+
+.section__title {
+  margin-bottom: 35px;
+  padding-top: 10px;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #022136;
+}
+
+.section__descr {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #022136;
+}
+
+.section__descr p {
+  margin-top: 20px;
 }
 
 .news {
@@ -918,6 +931,30 @@ body {
   margin-top: 20px;
 }
 
+.news__mini__item:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(2, 45, 75, 0.7)));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(2, 45, 75, 0.7) 100%);
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+.news__mini__item:hover:before {
+  opacity: 0.6;
+}
+
+.news__mini__img {
+  width: 100%;
+  height: 100%;
+}
+
 .news__mini__img img {
   width: 100%;
   height: 100%;
@@ -927,11 +964,13 @@ body {
 
 .news__mini__title {
   position: absolute;
-  bottom: 30px;
+  bottom: 20px;
   left: 20px;
+  right: 10px;
+  z-index: 2;
   font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 22px;
+  line-height: 27px;
   color: #FFFFFF;
 }
 
@@ -940,11 +979,12 @@ body {
 }
 
 .news__main__item {
+  position: relative;
   margin-top: 25px;
   padding: 25px 35px;
   background-color: #fff;
   border: 4px solid #84AAC4;
-  position: relative;
+  border-radius: 5px;
 }
 
 .news__main__item:before, .news__main__item:after {
@@ -952,6 +992,7 @@ body {
   position: absolute;
   z-index: -1;
   display: block;
+  display: none;
   width: 180px;
   height: 205px;
 }
@@ -973,6 +1014,7 @@ body {
 }
 
 .news__main__title {
+  max-width: 50%;
   font-weight: 700;
   font-size: 36px;
   line-height: 44px;
@@ -980,6 +1022,7 @@ body {
 }
 
 .news__main__text {
+  max-width: 90%;
   margin-top: 20px;
   font-weight: 500;
   font-size: 20px;
@@ -988,6 +1031,8 @@ body {
 }
 
 .news__main__img {
+  width: 100%;
+  height: 100%;
   margin-top: 20px;
 }
 
@@ -1042,10 +1087,11 @@ body {
 }
 
 .connection__item {
-  width: 414px;
+  width: 49%;
   padding: 25px 35px 35px;
   background-color: #fff;
   border: 4px solid #84AAC4;
+  border-radius: 10px;
 }
 
 .connection__subtitle {
@@ -1068,7 +1114,7 @@ body {
 }
 
 .connection__phone a:hover {
-  text-decoration: underline;
+  color: #73A5C8;
 }
 
 .connection__hours__item {
@@ -1319,17 +1365,6 @@ body {
 
 .program {
   width: 100%;
-}
-
-.program__descr {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
-  color: #022136;
-}
-
-.program__descr p {
-  margin-top: 20px;
 }
 
 .program__presenter {
@@ -1647,6 +1682,71 @@ body {
     width: 230px;
     font-size: 14px;
   }
+  .news__mini__item {
+    width: 49%;
+    height: 175px;
+  }
+  .news__mini__title {
+    left: 10px;
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .connection__item {
+    padding: 25px;
+  }
+  .connection__subtitle {
+    font-size: 32px;
+  }
+  .connection__phone {
+    margin-top: 15px;
+    font-size: 22px;
+  }
+  .connection__hours__item {
+    margin-top: 15px;
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 1140px) {
+  .news__main__title {
+    max-width: 70%;
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .news__main__text {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .lc {
+    min-width: 330px;
+  }
+  .lc__title {
+    font-size: 22px;
+  }
+  .lc__form button {
+    font-size: 22px;
+  }
+  .lc__link {
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .section__descr {
+    font-size: 22px;
+    line-height: 27px;
+  }
+  .connection__items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .connection__item {
+    width: 100%;
+    margin-top: 15px;
+  }
+  .connection__item:first-child {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 991px) {
@@ -1695,6 +1795,57 @@ body {
   .header__search button svg {
     width: 20px;
   }
+  .section__title {
+    font-size: 40px;
+  }
+  .section__descr {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .news__mini__item {
+    width: 100%;
+    height: 120px;
+    margin-top: 10px;
+  }
+  .news__mini__item:nth-child(3), .news__mini__item:nth-child(4) {
+    margin-top: 10px;
+  }
+  .news__mini__item:first-child {
+    margin-top: 0;
+  }
+  .news__mini__title {
+    bottom: 15px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .news__main__title {
+    font-size: 28px;
+    line-height: 36px;
+  }
+  .news__main__text {
+    max-width: 100%;
+    font-size: 18px;
+  }
+  .lc__form {
+    margin-top: 35px;
+  }
+  .lc__form input {
+    margin-top: 15px;
+  }
+  .lc__link {
+    margin-top: 25px;
+  }
+  .connection__subtitle {
+    font-size: 26px;
+  }
+  .connection__phone {
+    margin-top: 10px;
+    font-size: 19px;
+  }
+  .connection__hours__item {
+    margin-top: 10px;
+    font-size: 19px;
+  }
   .footer__logo {
     width: 140px;
   }
@@ -1727,14 +1878,8 @@ body {
   .container {
     padding: 0 10px;
   }
-  .header {
-    position: relative;
-  }
   .header__top {
     padding: 14px 0;
-  }
-  .header__logo {
-    width: 120px;
   }
   .header__social {
     position: relative;
@@ -1854,6 +1999,74 @@ body {
   .header__search {
     display: none;
   }
+  .section__title {
+    font-size: 35px;
+  }
+  .news {
+    margin: 0 auto;
+    width: 90%;
+  }
+  .news__box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .news__mini {
+    margin-left: 0;
+  }
+  .news__mini__item {
+    width: 100%;
+    height: 150px;
+  }
+  .news__mini__title {
+    bottom: 20px;
+    font-size: 18px;
+  }
+  .news__main__title {
+    max-width: 100%;
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .news__main__text {
+    max-width: 100%;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .lc {
+    margin-top: 25px;
+    padding: 30px 40px;
+    min-width: unset;
+    width: 100%;
+  }
+  .lc__form {
+    margin-top: 20px;
+  }
+  .lc__form input {
+    height: 50px;
+  }
+  .lc__form button {
+    height: 50px;
+    font-size: 18px;
+  }
+  .lc__link {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .page-box__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .sidebar {
+    margin-right: 0;
+  }
   .footer__box {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1883,6 +2096,63 @@ body {
     position: static;
     -webkit-transform: none;
             transform: none;
+  }
+  .adsense-slider__slide {
+    height: 80px;
+  }
+  .section__title {
+    margin-bottom: 25px;
+    font-size: 25px;
+  }
+  .news {
+    width: 100%;
+    padding: 20px 0;
+  }
+  .news__box {
+    margin-top: 0;
+  }
+  .news__mini__item {
+    height: 130px;
+  }
+  .news__mini__title {
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .news__main {
+    margin-top: 25px;
+  }
+  .news__main__item {
+    padding: 20px 15px;
+    border: 2px solid #84AAC4;
+  }
+  .news__main__title {
+    font-size: 17px;
+    line-height: 24px;
+  }
+  .news__main__text {
+    margin-top: 15px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .lc__title {
+    font-size: 18px;
+  }
+  .lc__form input {
+    margin-top: 10px;
+    padding-left: 15px;
+    font-size: 12px;
+  }
+  .lc__form button {
+    margin-top: 15px;
+    font-size: 16px;
+  }
+  .lc__link {
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .page-box__inner {
+    width: 100%;
   }
   .footer {
     padding: 25px 0;
